# trenchpass

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  Dockerfile  MAINTAINERS.md  README.md  REENGANCHE.md  RELEASE.md  ROADMAP.md  SECURITY.md  STYLEGUIDE.md  SUPPORT.md  clippy.toml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml
.agents/skills/ecosystem-conventions/: SKILL.md
.cargo/: audit.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  semgrep.yml
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  config.yml  feature.md
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml  security.yml
docs/: README.md  api.md  glossary.md  openapi.json  operations.md  threat-model.md
docs/adr/: 0001-rust-as-gateway-language.md  0002-satellite-repo-vs-monorepo.md  0003-vault-and-proton-pass.md  0004-mtls-termination-traefik.md  0005-postgres-audit-dedicated.md  0006-signoz-day-one.md  0007-via-fax-pgp-channel.md  0008-manitasfritas-shamir.md  README.md
docs/reportes/: seguridad-fase-1.md
docs/runbooks/: README.md  incident-response.md  postmortem-template.md  recovery-drill.md  revoke-consumer.md  rotate-provider-token.md  vault-unseal.md  via-fax.md
docs/runbooks/manitasfritas/: operator.md
examples/: drift_smoke.rs  fax_smoke.rs  otel_smoke.rs  refresh_smoke.rs  refresh_smoke_setup.sh
migrations/: 20260510120000_init_audit.sql
sql/: init_audit.sql  roles.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/audit/: mod.rs  store.rs
src/auth/: bearer.rs  mod.rs  mtls.rs  scope.rs
src/fax/: commands.rs  dispatch.rs  imap.rs  mod.rs  pgp.rs
src/otel/: mod.rs  setup.rs
src/security/: middleware.rs  mod.rs  ratelimit.rs  replay.rs
src/sync/: drift.rs  manifest.rs  mod.rs  source.rs  worker.rs
src/tools/: docuseal.rs  dokploy.rs  forgejo.rs  github.rs  glitchtip.rs  gocardless_dd.rs  gocardless_psd2.rs  hostinger.rs  mod.rs  n8n.rs  notion.rs  proton.rs  shared.rs  stripe.rs  vercel.rs
src/transport/: admin.rs  mod.rs  mtls.rs  peer_cert.rs  sse.rs
src/vault/: client.rs  mod.rs  pki.rs
